# joladnijo-backend

./: .editorconfig  Dockerfile  Makefile  README.md  dev.Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  openapi-schema.json  pyproject.toml  requirements.txt  setup.cfg  start-django.sh
.github/workflows/: django-build.yml
auth0/: urls.py  views.py
database/: mysql.cnf
joladnijo/: __init__.py  admin.py  apps.py  asgi.py  auth0.py  models.py  permissions.py  serializers.py  settings.py  signals.py  urls.py  views.py  wsgi.py
joladnijo/migrations/: 0001_initial.py  0002_aidcenter_geo_location.py  0002_auto_20220321_1433.py  0002_auto_20220321_2322.py  0002_auto_20220321_2354.py  0002_auto_20220420_1109.py  0002_auto_20220420_1112.py  0003_auto_20220312_1318.py  0003_feeditem.py
seeds/: default.yaml  sample.yaml
