[tool.poetry]
name = "joladnijo-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
django-simple-history = "3.0.0"
django-cors-headers = "3.11.0"
djangorestframework = "3.13.1"
djangorestframework-camel-case = "1.3.0"
mysqlclient = "2.1.0"
drf-jwt = "1.13.4"
requests = "2.22.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
mypy = "0.940"
flake8 = "4.0.1"
PyYAML = "6.0"
pytest = "7.0.1"
types-requests = "2.27.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
